# Pyfun

./: .gitattributes  .gitignore  Cargo.toml  DESIGN.md  INTERNALS.md  NOTICE  RATIONALE.md  README.md  RELEASING.md  ROADMAP.md  build-lsp.ps1  pyproject.toml  rust-toolchain.toml
.github/workflows/: kernel.yml  pages.yml  playground.yml  wheels.yml
bench/: README.md  collatz.pyfun  collatz_baseline.py  expr_eval.pyfun  expr_eval_baseline.py  map_build.pyfun  map_build_baseline.py  run.py
docs/: book.toml  verify_lessons.py
docs/src/: SUMMARY.md  introduction.md
docs/src/educators/: README.md  answer-keys.md  session-1.md  session-2.md  session-3.md  session-4.md  session-5.md
docs/src/internals/: 00-orientation.md  01-lexing.md  02-parsing.md  03-desugaring.md  04-inference.md  05-exhaustiveness.md  06-units.md  07-lowering.md  08-emission.md  09-diagnostics.md  10-tooling.md  README.md
docs/src/learn/: 01-values-and-inference.md  02-functions-currying-pipes.md  03-option.md  04-result.md  05-adts-and-match.md  06-records.md  07-collections.md  08-tuples.md  09-typed-holes.md  10-mutation.md  11-effects.md  12-python-interop.md  13-computation-expressions.md  14-units-of-measure.md  15-modules.md  16-capstone.md  17-recursion.md  18-async.md  19-active-patterns.md  20-build-your-own-ce.md  21-strings-and-numbers.md  README.md
docs/theme/: docs-run.js  highlight.js  pyfun-hljs.js  pyfun.css
editors/: README.md
editors/emacs/: pyfun-mode.el  pyfun-mode.elc
editors/jetbrains/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
editors/jetbrains/src/main/kotlin/com/github/simontreanor/pyfun/: PyfunFileType.kt  PyfunLanguage.kt  PyfunLanguageServerFactory.kt  PyfunTextMateBundleProvider.kt
editors/nvim/ftdetect/: pyfun.vim
editors/nvim/ftplugin/: pyfun.vim
editors/nvim/queries/pyfun/: highlights.scm
editors/nvim/syntax/: pyfun.vim
editors/tree-sitter-pyfun/: README.md  grammar.js  tree-sitter.json
editors/tree-sitter-pyfun/src/: grammar.json  node-types.json  parser.c  scanner.c
editors/tree-sitter-pyfun/test/: holes.pyfun  stress.pyfun
editors/tree-sitter-pyfun/test/corpus/: expressions.txt  items.txt  layout.txt  patterns.txt
editors/vscode/: .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  README.md  extension.js  package.json  pyfun.tmLanguage.json
editors/zed/: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
editors/zed/languages/pyfun/: config.toml  highlights.scm  indents.scm  outline.scm
editors/zed/src/: lib.rs
examples/: hello.pyfun
examples/interop/: README.md  datetime.pyfun  http_fetch.pyfun  json_decode.pyfun  json_to_adt.pyfun  read_files.pyfun  sqlite_query.pyfun
examples/interop/network-rail/: README.md  chippenham.pyfun  chippenham_fast.pyfun  nr_stream.py  sample.ndjson
examples/modules/: geometry.pyfun  main.pyfun  store.pyfun
playground/: Cargo.toml  README.md
playground/src/: lib.rs
playground/web/: app.js  index.html  pyfun-run.js  pyodide-worker.js  style.css
python/pyfun_kernel/: __init__.py  __main__.py  install.py  kernel.py
src/: desugar.rs  kernel.rs  lib.rs  main.rs  repl.rs
src/ast/: mod.rs
src/diagnostics/: mod.rs
src/lexer/: mod.rs  token.rs
src/lowering/: decode_spec.rs  fold_loop.rs  mod.rs
src/lsp/: json.rs  mod.rs  resolve.rs
src/parser/: ast.rs  mod.rs
src/project/: mod.rs
src/python_emitter/: mod.rs  py311.rs
src/types/: mod.rs
tests/: cli.rs  compile.rs  kernel.rs  kernel_e2e.py  lsp.rs  project.rs  repl.rs  roundtrip.rs  run.rs  typecheck.rs
