[package]
name = "pyfun"
version = "0.0.2"
edition = "2024"
rust-version = "1.96"
description = "An F#-inspired, functional-first language that compiles to readable Python."
authors = ["Simon Treanor"]
license = "Apache-2.0"
repository = "https://github.com/simontreanor/Pyfun"

# Phase 1 is intentionally dependency-free (pure std): lexer + parser + AST + pretty-printer.
# clap (CLI), an LSP crate, etc. arrive in later phases — see DESIGN.md.
[dependencies]

[[bin]]
name = "pyfun"
path = "src/main.rs"

[lib]
name = "pyfun"
path = "src/lib.rs"
